# debug_nrf_project

./: CMakeLists.txt  Kconfig  prj.conf
boards/KiwiElectronics/nrf52840_quantum_v2/: Kconfig.nrf52840_quantum_v2  nrf52840_quantum_v2.dts  nrf52840_quantum_v2.yml  nrf52840_quantum_v2_SSD1333.overlay  nrf52840_quantum_v2_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/display/: Kconfig
drivers/display/ssd1333/: Kconfig  ssd1333.c
drivers/display/ssd1333/SPIM/: ssd1333.c
drivers/display/ssd1333/zephyr/: module.yml
dts/bindings/display/: solomon,ssd1333.yaml
